--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -9,3 +9,5 @@ compiler:
 networks:
   mainnet-fork:
     eth_usd_price_feed: '0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419'
+  wallets:
+    from_key: ${PRIVATE_KEY}
